@@ -14,6 +14,7 @@
   * Derived classes from Object look for a method called finalize to use as their destructors
   * Rename Object#mixin_* to Object#included_*
   * Update README
+  * Rename Object#included_* to Object#extended_*
 
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
